Refactors to use gh CLI instead of REST API
Replaces direct REST API calls with `gh` CLI commands in `gh-check-ahead` and `gh-orphaned-prs` tools.  This simplifies authentication and leverages the existing GitHub CLI configuration.

Introduces a `github_utils.py` module to encapsulate common `gh` CLI interactions, improving code reuse and maintainability.

Adds support for wildcard organization specification (owner/*) in `gh-orphaned-prs`.

Updates `.gitignore` to ignore temporary directories.

--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,6 @@ dmypy.json
 ehthumbs.db
 Thumbs.db
 
-# Project specific
-check_ahead_branches.py
-find_orphaned_prs.py
+# Temporary directories
+temp-*/
+tmp/
